--- a/app/src/main/res/layout/layoutproducts.xml
+++ b/app/src/main/res/layout/layoutproducts.xml
@@ -32,6 +32,30 @@
                 android:layout_marginTop="5dp"
                 android:text="Product"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />
+
+              <ImageView
+                  android:id="@+id/add"
+                  android:background="@drawable/ic_baseline_add_24"
+                  android:layout_marginRight="160sp"
+                  android:layout_alignParentEnd="true"
+                  android:layout_width="60sp"
+                  android:layout_height="60sp"/>
+
+            <TextView
+                android:id="@+id/counterTextView"
+                android:layout_width="80sp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_marginRight="80sp"
+                android:gravity="center"
+                android:textSize="20sp" />
+            <ImageView
+                android:id="@+id/minus"
+                android:background="@drawable/ic_baseline_remove_circle_outline_24"
+
+                android:layout_alignParentEnd="true"
+                android:layout_width="60sp"
+                android:layout_height="60sp"/>
         </RelativeLayout>
 
     </androidx.cardview.widget.CardView>
